--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 spring.application.name=projetoBciclo2JoaoGuilherme
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=10.136.38.50
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
 spring.rabbitmq.port=5672
